# cap-hill-rust

./: .dockerignore  .gitignore  .zshrc  CHANGELOG.md  Cargo.toml  Dockerfile  README.md  cap-hill-rust.service  config.ron  fly.toml  init.sql  justfile  rust-toolchain.toml  server_setup.sh
.cargo/: config.toml
assets/: manifest.json
assets/favicons/: site.webmanifest
deployment/: cap-hill-rust.service  server_setup.sh
migrations/: 20231011163333_initial.down.sql  20231011163333_initial.up.sql
src/: catalog.rs  config.rs  error.rs  health_check.rs  lib.rs  logger.rs  logging.rs  main.rs
src/components/: footer.rs  mod.rs  nav.rs
src/pages/: index.rs  library.rs  mod.rs  not_found.rs
templates/: base.html  index.html  library.html  not_found.html
