[package]
edition = "2021"
license = "AGPL-3.0-only"
name = "web-server"
publish = false
repository = "https://github.com/JesusGuzmanJr/cap-hill-rust"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
codegen-units = 1
lto = true
strip = "debuginfo"

[dependencies]
actix-web = "4.4"
anyhow = "1.0"
askama = "0.12"
serde = {version = "1.0", features = ["derive"]}
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = {version = "0.3", features = ["env-filter"]}
