[package]
edition = "2021"
license = "AGPL-3.0-only"
name = "web-server"
publish = false
repository = "https://github.com/JesusGuzmanJr/cap-hill-rust"
version = "0.2.0-alpha-1"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
codegen-units = 1
lto = true
strip = "debuginfo"

[dependencies]
actix-files = "0.6"
actix-governor = "0.5.0"
actix-web = "4.4"
actix-web-lab = "0.19"
anyhow = "1.0"
askama = {version = "0.12", features = ["with-actix-web"]}
askama_actix = "0.14"
chrono = {version = "0.4", features = ["serde"]}
const_format = "0.2"
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0.107"
sqlx = {version = "0.7", features = [
  "chrono",
  "macros",
  "postgres",
  "runtime-tokio-rustls",
  "uuid",
]}
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = {version = "0.3", features = ["env-filter"]}
