[package]
edition = "2021"
license = "AGPL-3.0-only"
name = "cap-hill-rust"
publish = false
repository = "https://github.com/JesusGuzmanJr/cap-hill-rust"
version = "0.2.0-rc.1"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[profile.release]
codegen-units = 1
lto = true
strip = "debuginfo"

[dependencies]
actix-files = {version = "0.6", optional = true}
actix-governor = {version = "0.5.0", optional = true}
actix-web = {version = "4.4", optional = true}
actix-web-lab = {version = "0.19", optional = true}
anyhow = "1.0"
chrono = {version = "0.4", features = ["serde"]}
console_error_panic_hook = {version = "0.1", optional = true}
console_log = {version = "1.0", optional = true}
const_format = "0.2"
leptos = {version = "0.5", features = ["nightly"]}
leptos_actix = {version = "0.5", optional = true}
leptos_meta = {version = "0.5", features = ["nightly"]}
leptos_router = {version = "0.5", features = ["nightly"]}
log = {version = "0.4", optional = true}
serde = {version = "1.0", optional = true}
serde_json = {version = "1.0.107", optional = true}
thiserror = {version = "1.0", optional = true}
tracing = {version = "0.1", optional = true}
tracing-subscriber = {version = "0.3", features = ["env-filter"], optional = true}
wasm-bindgen = {version = "0.2", optional = true}

[features]
default = ["ssr", "hydrate"]
hydrate = ["leptos/hydrate", "leptos_meta/hydrate", "leptos_router/hydrate", "log", "console_error_panic_hook", "console_log", "wasm-bindgen"]
ssr = [
  "actix-files",
  "actix-governor",
  "actix-web",
  "actix-web-lab",
  "leptos_actix",
  "leptos_meta/ssr",
  "leptos_router/ssr",
  "leptos/ssr",
  "serde_json",
  "serde/derive",
  "tracing",
  "tracing-subscriber",
]

[package.metadata.leptos]
# Sets the name of the binary target used.
bin-target = "cap-hill-rust"

# The site root folder is where cargo-leptos generate all output. WARNING: all content of this folder will be erased on a rebuild. Use it in your server setup.
site-root = "target/site"

# Files in the asset-dir will be copied to the site-root directory
assets-dir = "assets"

# The port to use for automatic reload monitoring
reload-port = 8081

# The browserlist query used for optimizing the CSS.
browserquery = "defaults"

# The features to use when compiling the bin target
# Optional. Can be over-ridden with the command line parameter --bin-features
bin-features = ["ssr"]

# The features to use when compiling the lib target
# Optional. Can be over-ridden with the command line parameter --lib-features
lib-features = ["hydrate"]
